--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ h1 {
     margin: auto;
 }
 
+.score {
+    display: none;
+}
+
 aside {
     display: flex;
     justify-content: flex-end;
@@ -45,80 +49,6 @@ aside {
     }
 }
 
-#flashcard .card-stack-1 {
-    border: 3px solid #3D7587;
-    border-radius: 5px;
-    max-width: 300px;
-    width: 90%;
-    height: 520px;
-    padding: 0 40px;
-    background-color: white;
-    position: absolute;
-    top: -13px;
-    right: -13px;
-    z-index: -1;
-}
-
-@media (max-width: 640px) {
-    #flashcard .card-stack-1 {
-        max-width: 240px;
-        padding: 0 20px;
-        height: 460px;
-    }
-}
-
-#flashcard .card-stack-2 {
-    border: 3px solid #3D7587;
-    border-radius: 5px;
-    max-width: 300px;
-    width: 90%;
-    height: 520px;
-    padding: 0 40px;
-    background-color: white;
-    position: absolute;
-    top: -23px;
-    right: -23px;
-    z-index: -2;
-}
-
-@media (max-width: 640px) {
-    #flashcard .card-stack-2 {
-        max-width: 240px;
-        padding: 0 20px;
-        height: 460px;
-    }
-}
-
-#flashcard .card-stack-3 {
-    border: 3px solid #3D7587;
-    border-radius: 5px;
-    max-width: 300px;
-    width: 90%;
-    height: 520px;
-    padding: 0 40px;
-    background-color: white;
-    position: absolute;
-    top: -33px;
-    right: -33px;
-    z-index: -3;
-}
-
-@media (max-width: 640px) {
-    #flashcard .card-stack-3 {
-        max-width: 240px;
-        padding: 0 20px;
-        height: 460px;
-    }
-}
-
-
-
-/* .question-container, .answer-container {
-    height: 190px;
-    padding: 15px 0;
-    position: relative;
-} */
-
 #controls {
     display: flex;
     justify-content: center;
@@ -126,10 +56,15 @@ aside {
 }
 
 form {
-    display: flex;
+    display: none;
     flex-direction: column;
 }
 
 .next-card {
+    display: none;
     margin: 30px 80px;
+}
+
+.reset-game {
+    display: none;
 }
